[MD Extensions] Fix toolbar flicker in dev mode

Track whether the page is being created (or refreshed) with dev mode on
by tracking the preference in C++ and changing the shim HTML/CSS via the
$i18n{...} mechanism.

Also set inDevMode in <extensions-manager> as soon as possible.

Bug: 788018
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I131cb04024cbfbaf4159a110ee1112346ea59a8c
Reviewed-on: https://chromium-review.googlesource.com/786441
Commit-Queue: Dan Beam (no longer on Chrome) <dbeam@chromium.org>
Reviewed-by: Demetrios Papadopoulos <dpapad@chromium.org>
Cr-Commit-Position: refs/heads/master@{#519589}
Former-commit-id: 06c271647190e96bdef672fc79d37a1235d9424f