chrome/browser/ui/webui/extensions/extensions_ui.h
@@ -6,6 +6,7 @@
 #define CHROME_BROWSER_UI_WEBUI_EXTENSIONS_EXTENSIONS_UI_H_
 
 #include "base/macros.h"
+#include "components/prefs/pref_member.h"
 #include "content/public/browser/web_ui_controller.h"
 #include "ui/base/layout.h"
 
@@ -24,6 +25,12 @@ class ExtensionsUI : public content::WebUIController {
       ui::ScaleFactor scale_factor);
 
  private:
+  // Called when developer mode is toggled.
+  void OnDevModeChanged();
+
+  // Tracks whether developer mode is enabled.
+  BooleanPrefMember in_dev_mode_;
+
   DISALLOW_COPY_AND_ASSIGN(ExtensionsUI);
 };
 
